# Qt5_PasswordManager

./: .gitignore  .pylintrc  MANIFEST.in  Qt5_PasswordManager.py  README.md  config.json  config.py  connectorconfig.py  copybtn.py  defaults.json  editbtn.py  main.py  mainwindow.py  managepasswordswindow.py  messagebox.py  password.py  pyproject.toml  qpassword_manager.py  removebtn.py  requirements.txt  settings.py  setup.py  setupwindow.py  showpasswordswindow.py
.github/workflows/: pylint.yml
conf/: config.json  connectorconfig.py  settings.py
default_config/: config.json
qpassword_manager/: __main__.py  autofill.json  displaypasswordswindow.py  entry_input.py  login_window.py  loginwindow.py  main_window.py  mainwindow.py  managepasswordswindow.py  messagebox.py  new_password_input.py  password_table.py  setup_window.py  setupwindow.py  showpasswordswindow.py
qpassword_manager/btns/: copybtn.py  editbtn.py  removebtn.py
qpassword_manager/conf/: config.json  connectorconfig.py  settings.py
qpassword_manager/database/: database_handler.py  databasesetup.py
