[tool.poetry]
name = "qpassword_manager"
version = "0.1.0"
description = ""
authors = ["ShiNoNeko47 <nikola.brezovec.32123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
